[serversetup-bwlp] Update translations

--- a/modules-available/serversetup-bwlp/lang/de/module.json
+++ b/modules-available/serversetup-bwlp/lang/de/module.json
@@ -1,4 +1,14 @@
 {
+    "dl-efi": "UEFI",
+    "dl-hd": "HDD Partitions-Image",
+    "dl-i386": "32\u2009Bit",
+    "dl-lkrn": "In Kernel-Header gewrappt",
+    "dl-pcbios": "Legacy BIOS",
+    "dl-pcinic": "Mit PCI(e) Netzwerktreibern",
+    "dl-snp": "Verwendet SNP-Netzwerkschnittstelle",
+    "dl-usb": "USB-Image",
+    "dl-usbnic": "Mit USB Netzwerktreibern",
+    "dl-x86_64": "64\u2009Bit",
     "module_name": "iPXE \/ Boot Menu",
     "page_title": "PXE- und Boot-Einstellungen",
     "submenu_address": "Server-Adresse",
