--- a/modules-available/serversetup-bwlp/lang/de/template-tags.json
+++ b/modules-available/serversetup-bwlp/lang/de/template-tags.json
@@ -6,6 +6,7 @@
     "lang_archAgnostic": "Architekturunabh\u00e4ngig",
     "lang_archBoth": "BIOS und EFI",
     "lang_archSelector": "Architekturauswahl",
+    "lang_assignMenuToLocation": "Ort ein Men\u00fc zuweisen",
     "lang_biosOnly": "Nur BIOS",
     "lang_bootAddress": "Boot-Adresse des Servers",
     "lang_bootBehavior": "Standard-Bootverhalten",
@@ -19,7 +20,7 @@
     "lang_chooseIP": "Bitte w\u00e4hlen Sie die IP-Adresse, \u00fcber die der Server von den Clients zum Booten angesprochen werden soll.",
     "lang_commandLine": "Command line",
     "lang_customEntry": "Eigener Eintrag",
-    "lang_downloadImage": "USB-Image herunterladen",
+    "lang_downloadBootImage": "Boot-Image herunterladen",
     "lang_downloadRufus": "Rufus herunterladen",
     "lang_editBuiltinWarn": "Achtung! Sie bearbeiten einen der vorgegebenen Eintr\u00e4ge! Bei einem Update k\u00f6nnten Ihre \u00c4nderungen wieder \u00fcberschrieben werden",
     "lang_editMenuHead": "Men\u00fc bearbeiten",
@@ -50,6 +51,7 @@
     "lang_menuCustomHint3": "und w\u00e4hlen Sie als Standard-Bootverhalten ebenfalls custom.",
     "lang_menuDeleteConfirm": "Sind Sie sicher, dass Sie dieses Men\u00fc l\u00f6schen wollen?",
     "lang_menuDisplayTime": "Anzeigedauer des Men\u00fcs",
+    "lang_menuEntryOverride": "Standardeintrag \u00fcberschreiben",
     "lang_menuGeneration": "Erzeugen des Bootmen\u00fcs",
     "lang_menuLocations": "Zugewiesene Orte",
     "lang_menuTimeout": "Timeout",
@@ -70,6 +72,9 @@
     "lang_usbBuilt": "USB-Image gebaut",
     "lang_usbImage": "USB-Image",
     "lang_usbImgHelp": "Mit dem USB-Image k\u00f6nnen Sie einen bootbaren USB-Stick erstellen, \u00fcber den sich bwLehrpool an Rechnern starten l\u00e4sst, die keinen Netzwerkboot unterst\u00fctzen, bzw. f\u00fcr die keine entsprechende DHCP-Konfiguration vorhanden ist. Dies erfordert dann lediglich, dass in der BIOS-Konfiguration des Rechners USB-Boot zugelassen ist. Der Stick dient dabei lediglich als Einstiegspunkt; es ist nach wie vor ein bwLehrpool-Satellitenserver f\u00fcr den eigentlichen Bootvorgang von N\u00f6ten.",
+    "lang_usbImgHelpBtn": "Bootbaren USB-Stick erstellen",
     "lang_usbImgHelpLinux": "Nutzen Sie dd, um das Image auf einen USB-Stick zu schreiben. Das Image enth\u00e4lt bereits eine Partitionstabelle, achten Sie daher darauf, dass Sie das Image z.B. nach \/dev\/sdx schreiben, und nicht nach \/dev\/sdx1",
-    "lang_usbImgHelpWindows": "Unter Windows muss zun\u00e4chst ein Programm besorgt werden, mit dem sich Images direkt auf einen USB-Stick schreiben lassen. Es gibt gleich mehrere kostenlose und quelloffene Programme, eines davon ist Rufus. Rufus wurde mit dem bwLehrpool-Image gestetet. Nach dem Starten des Programms ist lediglich das heruntergeladene Image zu \u00f6ffnen, sowie in der Liste der Laufwerke der richtige USB-Stick auszuw\u00e4hlen (damit Sie nicht versehentlich Daten auf dem falschen Laufwerk \u00fcberschreiben!)"
+    "lang_usbImgHelpWindows": "Unter Windows muss zun\u00e4chst ein Programm besorgt werden, mit dem sich Images direkt auf einen USB-Stick schreiben lassen. Es gibt gleich mehrere kostenlose und quelloffene Programme, eines davon ist Rufus. Rufus wurde mit dem bwLehrpool-Image gestetet. Nach dem Starten des Programms ist lediglich das heruntergeladene Image zu \u00f6ffnen, sowie in der Liste der Laufwerke der richtige USB-Stick auszuw\u00e4hlen (damit Sie nicht versehentlich Daten auf dem falschen Laufwerk \u00fcberschreiben!)",
+    "lang_useDefaultMenu": "\u00dcbergeordnetes Men\u00fc verwenden",
+    "lang_useDefaultMenuEntry": "(Vorgabe des Men\u00fcs)"
 }
