--- a/modules-available/serversetup-bwlp/lang/de/template-tags.json
+++ b/modules-available/serversetup-bwlp/lang/de/template-tags.json
@@ -19,6 +19,7 @@
     "lang_bootentryTitle": "Booteintrag",
     "lang_chooseIP": "Bitte w\u00e4hlen Sie die IP-Adresse, \u00fcber die der Server von den Clients zum Booten angesprochen werden soll.",
     "lang_commandLine": "Command line",
+    "lang_count": "Anzahl",
     "lang_customEntry": "Eigener Eintrag",
     "lang_downloadBootImage": "Boot-Image herunterladen",
     "lang_downloadRufus": "Rufus herunterladen",
@@ -41,6 +42,10 @@
     "lang_initRd": "Zu ladendes initramfs",
     "lang_isDefault": "Standard",
     "lang_listOfMenus": "Men\u00fcliste",
+    "lang_localBootDefault": "Standardm\u00e4\u00dfig verwendete Methode, um von Festplatte zu booten",
+    "lang_localBootExceptions": "Ausnahmen, pro Rechnermodell definierbar",
+    "lang_localBootHead": "Boot von Festplatte",
+    "lang_localBootIntro": "Aus dem iPXE Bootmen\u00fc kann auf verschiedene Arten ein Boot von der prim\u00e4ren Festplatte ausgel\u00f6st werden. In den allermeisten F\u00e4llen ist die Einstellung \"AUTO\" ausreichend, bei bestimmten Rechnermodellen kann es allerdings erforderlich sein, eine der alternativen Methoden zu erzwingen. Falls Sie einem solchen Modell begegnen, k\u00f6nnen Sie im unteren Teil dieser Seite eine solche Ausnahme festlegen. In einigen F\u00e4llen l\u00e4sst sich das Problem auch durch ein BIOS-Update auf den entsprechenden Ger\u00e4ten beheben.",
     "lang_localHDD": "Lokale HDD",
     "lang_locationCount": "Anzahl Orte",
     "lang_masterPassword": "Master-Passwort",
@@ -60,6 +65,7 @@
     "lang_newBootEntryHead": "Neuer Booteintrag",
     "lang_newMenu": "Neues Men\u00fc",
     "lang_none": "(keine)",
+    "lang_override": "\u00dcberschreiben",
     "lang_pxeBuilt": "PXE-Binary gebaut",
     "lang_recompileHint": "iPXE-Binaries jetzt neu kompilieren. Normalerweise wird dieser Vorgang bei \u00c4nderungen automatisch ausgef\u00fchrt. Sollten Bootprobleme auftreten, k\u00f6nnen Sie hier den Vorgang manuell ansto\u00dfen.",
     "lang_scriptContent": "Script",
