--- a/modules-available/serversetup-bwlp/lang/de/template-tags.json
+++ b/modules-available/serversetup-bwlp/lang/de/template-tags.json
@@ -72,6 +72,7 @@
     "lang_seconds": "Sekunden",
     "lang_set": "Setzen",
     "lang_spacer": "Abstandhalter\/\u00dcberschrift",
+    "lang_systemmodel": "System-Modell",
     "lang_title": "Titel",
     "lang_typeExecEntry": "Standardeintrag",
     "lang_typeScriptEntry": "Benutzerdefiniertes Script",
