[locationinfo] some design rework - Change "free" to "open" - h/min display in summary - do not display colors of unused states in summary - change seatcounter to emDash when room has current event

--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -30,7 +30,8 @@
     "lang_error": "Fehler",
     "lang_expertMode": "Expertenmodus",
     "lang_fourLocsHint": "Hier k\u00f6nnen Sie bis zu vier Orte ausw\u00e4hlen, die in diesem Panel angezeigt werden.",
-    "lang_free": "Frei",
+    "lang_free": "Geöffnet",
+    "lang_for": "für",
     "lang_general": "Allgemein",
     "lang_ignoreSslTooltip": "Akzeptiere ung\u00fcltige, abgelaufene oder selbstsignierte SSL-Zertifikate",
     "lang_insecureSsl": "Unsicheres SSL",
