--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -30,7 +30,8 @@
     "lang_error": "Error",
     "lang_expertMode": "Expert mode",
     "lang_fourLocsHint": "You can pick up to four locations that will be shown in this panel.",
-    "lang_free": "Free",
+    "lang_free": "Open",
+    "lang_for": "for",
     "lang_general": "General",
     "lang_ignoreSslTooltip": "Accept invalid, expired or self-signed ssl certificates",
     "lang_insecureSsl": "Insecure SSL",
