[statistics] Track and display memory/tmp usage of clients

--- a/modules-available/statistics/lang/en/template-tags.json
+++ b/modules-available/statistics/lang/en/template-tags.json
@@ -14,6 +14,7 @@
     "lang_event": "Event",
     "lang_eventType": "Type",
     "lang_firstSeen": "First seen",
+    "lang_free": "free",
     "lang_gbRam": "RAM",
     "lang_hardwareSummary": "Hardware",
     "lang_hdds": "Hard disk drives",
@@ -40,6 +41,7 @@
     "lang_machineStandby": "In standby mode",
     "lang_machineSummary": "Summary",
     "lang_maximumAbbrev": "max.",
+    "lang_memFree": "RAM free (MB)",
     "lang_memoryStats": "Memory",
     "lang_model": "Model",
     "lang_modelCount": "Count",
@@ -82,10 +84,12 @@
     "lang_subnet": "Subnet",
     "lang_sureDeletePermanent": "Are your sure you want to delete the selected machine(s) from the database? This cannot be undone.\r\n\r\nNote: Deleting machines from the database does not prevent booting up bwLehrpool again, which would recreate their respective database entries.",
     "lang_sureReplaceNoUndo": "Are you sure you want to replace the selected machine pairs? This action cannot be undone.",
+    "lang_swapFree": "swap free (MB)",
     "lang_tempPart": "Temp. partition",
     "lang_tempPartStats": "Temporary partition",
     "lang_thoseAreProjectors": "These model names will always be treated as beamers, even if the device's EDID data says otherwise.",
     "lang_timebarDesc": "Visual representation of the last few days. Red parts mark periods where the client was occupied, green parts where the client was idle. Dimmed parts mark nights (10pm to 8am).",
+    "lang_tmpFree": "ID44 free (MB)",
     "lang_tmpGb": "Temp HDD",
     "lang_total": "Total",
     "lang_usageDetails": "Detailed usage",
