--- a/modules-available/statistics/lang/de/template-tags.json
+++ b/modules-available/statistics/lang/de/template-tags.json
@@ -14,6 +14,7 @@
     "lang_event": "Ereignis",
     "lang_eventType": "Typ",
     "lang_firstSeen": "Erste Aktivit\u00e4t",
+    "lang_free": "frei",
     "lang_gbRam": "RAM",
     "lang_hardwareSummary": "Hardware",
     "lang_hdds": "Festplatten",
@@ -40,6 +41,7 @@
     "lang_machineStandby": "Im Standby",
     "lang_machineSummary": "Zusammenfassung",
     "lang_maximumAbbrev": "Max.",
+    "lang_memFree": "RAM frei (MB)",
     "lang_memoryStats": "Arbeitsspeicher",
     "lang_model": "Modell",
     "lang_modelCount": "Anzahl",
@@ -82,10 +84,12 @@
     "lang_subnet": "Subnetz",
     "lang_sureDeletePermanent": "M\u00f6chten Sie diese(n) Rechner wirklich unwiderruflich aus der Datenbank entfernen?\r\n\r\nWichtig: L\u00f6schen verhindert nicht, dass ein Rechner nach erneutem Starten von bwLehrpool wieder in die Datenbank aufgenommen wird.",
     "lang_sureReplaceNoUndo": "Wollen Sie die Daten ausgew\u00e4hlten Rechner \u00fcbertragen? Diese Aktion kann nicht r\u00fcckg\u00e4ngig gemacht werden.",
+    "lang_swapFree": "swap frei (MB)",
     "lang_tempPart": "Temp. Partition",
     "lang_tempPartStats": "Tempor\u00e4re Partition",
     "lang_thoseAreProjectors": "Diese Modellnamen werden als Beamer behandelt, auch wenn die EDID-Informationen des Ger\u00e4tes anderes berichten.",
     "lang_timebarDesc": "Visuelle Darstellung der letzten Tage. Rote Abschnitte zeigen, wann der Rechner belegt war, gr\u00fcne, wann er nicht verwendet wurde, aber eingeschaltet war. Die leicht abgedunkelten Abschnitte markieren N\u00e4chte (22 bis 8 Uhr).",
+    "lang_tmpFree": "ID44 frei (MB)",
     "lang_tmpGb": "Temp-HDD",
     "lang_total": "Gesamt",
     "lang_usageDetails": "Nutzungsdetails",
