[dozmod] Add UI to create preset network rules

--- a/modules-available/dozmod/lang/de/messages.json
+++ b/modules-available/dozmod/lang/de/messages.json
@@ -11,6 +11,12 @@
     "ldap-filter-saved": "LDAP Filter wurde erfolgreich gespeichert",
     "ldap-invalid-filter-id": "Ung\u00fcltige LDAP Filter ID",
     "mail-config-saved": "Mail-Konfiguration gespeichert",
+    "networkrule-deleted": "Netzwerk-Regel gel\u00f6scht",
+    "networkrule-invalid-direction": "Ung\u00fcltige Richtung: {{0}}",
+    "networkrule-invalid-ruleid": "Nicht-existierende Regel: {{0}}",
+    "networkrule-missing-host": "Fehlende Hostangabe",
+    "networkrule-missing-port": "Fehlende Portangabe",
+    "networkrule-saved": "Netzwerk-Regel gespeichert",
     "networkshare-deleted": "Netzlaufwerk gel\u00f6scht",
     "networkshare-invalid-auth-type": "Ung\u00fcltiger Authentifizierungs-Typ: {{0}}",
     "networkshare-invalid-shareid": "Nicht-existierender Share: {{0}}",
