--- a/modules-available/dozmod/lang/en/messages.json
+++ b/modules-available/dozmod/lang/en/messages.json
@@ -11,6 +11,12 @@
     "ldap-filter-saved": "Successfully modified LDAP filter",
     "ldap-invalid-filter-id": "Invalid LDAP filter id",
     "mail-config-saved": "Mail config saved",
+    "networkrule-deleted": "Network rule deleted",
+    "networkrule-invalid-direction": "Invalid direction: {{0}}",
+    "networkrule-invalid-ruleid": "Invalid rule id: {{0}}",
+    "networkrule-missing-host": "Missing host",
+    "networkrule-missing-port": "Missing port",
+    "networkrule-saved": "Network rule saved",
     "networkshare-deleted": "Network share deleted",
     "networkshare-invalid-auth-type": "Invalid auth type: {{0}}",
     "networkshare-invalid-shareid": "Invalid share id: {{0}}",
