--- a/modules-available/dozmod/lang/en/template-tags.json
+++ b/modules-available/dozmod/lang/en/template-tags.json
@@ -1,6 +1,7 @@
 {
     "lang_actionTarget": "Action target",
     "lang_active": "Active",
+    "lang_addRule": "Add Network Rule",
     "lang_addShare": "Add Network Share",
     "lang_allowLoginByDefault": "Allow all staff members to login and use the bwLehrpool-Suite",
     "lang_allowLoginDescription": "If this option is enabled, all members of the organization marked as staff or employee are allowed to login to this server and manage VMs\/courses. Otherwise, new users need to be individually allowed access after their first login attempt by visiting the sub page \"users and permissions\" in this web interface.",
@@ -23,7 +24,9 @@
     "lang_descriptionPermissionConfig": "These are the default permissions being used for VMs and lectures if the owner does not specify any.",
     "lang_descriptionRuntimeLimits": "Here you can define some limits, e.g. how long a newly uploaded VM will be valid. This should make sure that you don't end up with a lot of old, unused VMs over time.\r\n\r\nModified settings won't apply for already existing VMs.",
     "lang_description_delete_images": "This is a list of VMs that either expired, or where the disk image is damaged or missing. These VMs are not available in bwLehrpool currently, but you have to manually confirm the deletion of the disk images for safety reasons (clock skew etc.)",
+    "lang_direction": "Direction",
     "lang_dozmodLogHeading": "bwLehrpool-Suite action log",
+    "lang_editNetworkrule": "Edit Network Rule",
     "lang_editNetworkshare": "Edit Network Share",
     "lang_email": "E-Mail",
     "lang_emailNotifications": "E-Mail notifications enabled",
@@ -63,6 +66,7 @@
     "lang_miscOptions": "Misc options",
     "lang_modified": "modified",
     "lang_name": "Name",
+    "lang_networkrules": "Network Rules",
     "lang_networkshares": "Network Shares",
     "lang_networksharesIntro": "This is the list of predefined network shares. bwLehrpool-Suite users can still add custom network shares to their lectures, however having commonly used network shares as predefined entries should be much more convenient. Another advantage is that changing the path of a network share centrally avoids having to edit a dozen lectures' configuration manually.",
     "lang_none": "(none)",
