--- a/modules-available/dozmod/lang/en/permissions.json
+++ b/modules-available/dozmod/lang/en/permissions.json
@@ -4,6 +4,8 @@
     "ldapfilters.save": "Save LDAP filter.",
     "ldapfilters.view": "View LDAP filters. ",
     "mailconfig.save": "Save SMTP configuration for sending mails.",
+    "networkrules.save": "View network rules.",
+    "networkrules.view": "Save network rules.",
     "networkshares.save": "View network drives.",
     "networkshares.view": "Save network drives.",
     "runtimeconfig.save": "Save limits and defaults of a runtime configuration.",
