--- a/modules-available/serversetup-bwlp/lang/de/template-tags.json
+++ b/modules-available/serversetup-bwlp/lang/de/template-tags.json
@@ -1,8 +1,9 @@
 {
     "lang_active": "Aktiv",
     "lang_add": "Hinzuf\u00fcgen",
-    "lang_addBootentry": "Booteintrag hinzuf\u00fcgen",
+    "lang_addBootentry": "Men\u00fceintrag hinzuf\u00fcgen",
     "lang_addMenu": "Men\u00fc hinzuf\u00fcgen",
+    "lang_additionalInfoLink": "Weitere Informationen",
     "lang_archAgnostic": "Architekturunabh\u00e4ngig",
     "lang_archBoth": "BIOS und EFI",
     "lang_archSelector": "Architekturauswahl",
@@ -10,13 +11,15 @@
     "lang_biosOnly": "Nur BIOS",
     "lang_bootAddress": "Boot-Adresse des Servers",
     "lang_bootBehavior": "Standard-Bootverhalten",
-    "lang_bootEntryData": "Daten des Booteintrags",
+    "lang_bootEntryData": "Daten des Men\u00fceintrags",
     "lang_bootHint": "Das Bootmen\u00fc muss nach einer \u00c4nderung der IP-Adresse neu generiert werden. In der Regel geschieht dies automatisch, der Vorgang kann in der Sektion Bootmen\u00fc allerdings auch manuell ausgel\u00f6st werden.",
     "lang_bootInfo": "Hier k\u00f6nnen Anpassungen am Erscheinungsbild des Bootmen\u00fcs vorgenommen werden.",
     "lang_bootMenu": "Bootmen\u00fc",
     "lang_bootMenuCreate": "Bootmen\u00fc erzeugen",
-    "lang_bootentryDeleteConfirm": "Sind Sie sicher, dass Sie diesen Booteintrag l\u00f6schen wollen?",
-    "lang_bootentryTitle": "Booteintrag",
+    "lang_bootentryDeleteConfirm": "Sind Sie sicher, dass Sie diesen Men\u00fceintrag l\u00f6schen wollen?",
+    "lang_bootentryHead": "Men\u00fceintr\u00e4ge",
+    "lang_bootentryIntro": "Hier k\u00f6nnen Sie Men\u00fceintr\u00e4ge definieren, die sich sp\u00e4ter einem Men\u00fc zuweisen lassen. Ein Men\u00fceintrag besteht entweder aus einem zu ladenen Kernel\/Image plus optional initrd, oder aus einem iPXE-Script.",
+    "lang_bootentryTitle": "Men\u00fceintrag",
     "lang_chooseIP": "Bitte w\u00e4hlen Sie die IP-Adresse, \u00fcber die der Server von den Clients zum Booten angesprochen werden soll.",
     "lang_commandLine": "Command line",
     "lang_count": "Anzahl",
@@ -26,7 +29,7 @@
     "lang_editBuiltinWarn": "Achtung! Sie bearbeiten einen der vorgegebenen Eintr\u00e4ge! Bei einem Update k\u00f6nnten Ihre \u00c4nderungen wieder \u00fcberschrieben werden",
     "lang_editMenuHead": "Men\u00fc bearbeiten",
     "lang_efiOnly": "Nur EFI",
-    "lang_entryChooserTitle": "Booteintrag ausw\u00e4hlen",
+    "lang_entryChooserTitle": "Men\u00fceintrag ausw\u00e4hlen",
     "lang_entryId": "ID",
     "lang_entryTitle": "Bezeichnung",
     "lang_example": "Beispiel",
@@ -40,6 +43,7 @@
     "lang_idFormatHint": "(Max. 16 Zeichen, nur a-z 0-9 - _)",
     "lang_imageToLoad": "Zu ladendes Image (z.B. Kernel)",
     "lang_initRd": "Zu ladendes initramfs",
+    "lang_ipxeWikiUrl": "im iPXE Wiki",
     "lang_isDefault": "Standard",
     "lang_listOfMenus": "Men\u00fcliste",
     "lang_localBootDefault": "Standardm\u00e4\u00dfig verwendete Methode, um von Festplatte zu booten",
@@ -49,7 +53,7 @@
     "lang_localHDD": "Lokale HDD",
     "lang_locationCount": "Anzahl Orte",
     "lang_masterPassword": "Master-Passwort",
-    "lang_masterPasswordHelp": "Das Master-Passwort wird ben\u00f6tigt, um einen Booteintrag direkt am Client tempor\u00e4r durch Dr\u00fccken der Tab-Taste zu editieren. Da dies f\u00fcr Manipulation am Client genutzt werden kann, sollte diese Funktion unbedingt mit einem Passwort gesch\u00fctzt werden.",
+    "lang_masterPasswordHelp": "Das Master-Passwort wird ben\u00f6tigt, um einen Men\u00fceintrag direkt am Client tempor\u00e4r durch Dr\u00fccken der Tab-Taste zu editieren. Da dies f\u00fcr Manipulation am Client genutzt werden kann, sollte diese Funktion unbedingt mit einem Passwort gesch\u00fctzt werden.",
     "lang_menuCustom": "Benutzerdefinierter Men\u00fczusatz",
     "lang_menuCustomHint1": "Hier haben Sie die M\u00f6glichkeit, eigenen Men\u00fc-Code zum angezeigten PXE-Men\u00fc hinzuzuf\u00fcgen, um z.B. auf weitere PXE-Server zu verweisen. Das Format entspricht dem syslinux Men\u00fcformat.",
     "lang_menuCustomHint2": "Sie k\u00f6nnen ein oder mehrere Eintr\u00e4ge erzeugen. Wenn Sie einen Eintrag erzeugen m\u00f6chten, der automatisch gestartet wird, wenn der Benutzer keine Auswahl t\u00e4tigt, vergeben Sie als",
@@ -58,16 +62,19 @@
     "lang_menuDisplayTime": "Anzeigedauer des Men\u00fcs",
     "lang_menuEntryOverride": "Standardeintrag \u00fcberschreiben",
     "lang_menuGeneration": "Erzeugen des Bootmen\u00fcs",
+    "lang_menuListIntro": "Hier sehen Sie eine Liste aller vorhandenen Men\u00fcs, deren Zuordnung zu R\u00e4umen sowie die M\u00f6glichkeit, diese zu editieren oder l\u00f6schen. Um ein Men\u00fc einem bestimmten Raum zuzuweisen, besuchen Sie bitte den Men\u00fcpunkt \"R\u00e4ume\/Orte\".",
     "lang_menuLocations": "Zugewiesene Orte",
     "lang_menuTimeout": "Timeout",
     "lang_menuTitle": "Men\u00fc",
     "lang_moduleHeading": "iPXE \/ Boot Menu",
-    "lang_newBootEntryHead": "Neuer Booteintrag",
+    "lang_newBootEntryHead": "Neuer Men\u00fceintrag",
     "lang_newMenu": "Neues Men\u00fc",
     "lang_none": "(keine)",
     "lang_override": "\u00dcberschreiben",
     "lang_pxeBuilt": "PXE-Binary gebaut",
     "lang_recompileHint": "iPXE-Binaries jetzt neu kompilieren. Normalerweise wird dieser Vorgang bei \u00c4nderungen automatisch ausgef\u00fchrt. Sollten Bootprobleme auftreten, k\u00f6nnen Sie hier den Vorgang manuell ansto\u00dfen.",
+    "lang_refCount": "Referenzen",
+    "lang_referencingMenus": "Verkn\u00fcpfte Men\u00fcs",
     "lang_scriptContent": "Script",
     "lang_seconds": "Sekunden",
     "lang_set": "Setzen",
