--- a/modules-available/serversetup-bwlp/lang/de/module.json
+++ b/modules-available/serversetup-bwlp/lang/de/module.json
@@ -12,7 +12,7 @@
     "module_name": "iPXE \/ Boot Menu",
     "page_title": "PXE- und Boot-Einstellungen",
     "submenu_address": "Server-Adresse",
-    "submenu_bootentry": "Booteintr\u00e4ge verwalten",
+    "submenu_bootentry": "Men\u00fceintr\u00e4ge verwalten",
     "submenu_download": "Downloads",
     "submenu_localboot": "HDD-Boot",
     "submenu_menu": "Men\u00fcs verwalten"
